--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,11 @@
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye"
-	//"build": {
+	//"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye"
+	"build": {
 		// Path is relative to the devcontainer.json file.
-	//	"dockerfile": "dockerfile"
-	//}
+		"dockerfile": "dockerfile"
+	}
 
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
